# built-on-envoy

./: .gitignore  .golangci.yml  .licenserc.yaml  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  catalog.go  go.mod  go.sum  netlify.toml
.cargo/: config.toml
.github/: codecov.yml  dependabot.yml
.github/workflows/: build.yaml  ci.yaml  cli.yaml  extensions-extproc.yaml  extensions-go.yaml  extensions-rust.yaml  extensions-wasm.yaml  extensions.yaml  release-cli.yaml  release-composer.yaml  release-extensions-dev.yaml  release-extensions-impl.yaml  release-extensions.yaml  release-extproc.yaml  release-loader.yaml  release-lua.yaml  release-plugin.yaml  release-rust.yaml  release-wasm.yaml  release.yaml  scan-cli.yaml  scan.yaml  ui.yaml  website.yaml
cli/: .gitignore  .golangci.yml  .licenserc.yaml  .testcoverage.yml  Dockerfile  Makefile  README.md  entrypoint.sh  go.mod  go.sum  main.go
cli/cmd/: Dockerfile.goplugin  clean.go  clean_help.md  clean_test.go  config.go  config_help.md  config_test.go  create.go  create_help.md  create_test.go  download.go  download_help.md  download_test.go  flags.go  flags_test.go  genconfig.go  genconfig_help.md  genconfig_test.go  healthcheck.go  healthcheck_test.go  help_test.go  list.go  list_help.md  list_test.go  logs.go  logs_help.md  logs_test.go  pull.go  pull_help.md  pull_test.go  push.go  push_help.md  push_test.go  remote_integration_test.go  root.go  root_test.go  run.go  run_help.md  run_test.go  ui.go  (+3 more)
cli/e2e/: create_test.go  download_test.go  genconfig_test.go  main_test.go  proxy_test.go  push_test.go  run_test.go
cli/internal/: ansi.go  logging.go  logging_test.go  version.go  version_test.go
cli/tools/: go.mod  go.sum
extensions/: .testcoverage.yml  CLAUDE-PROMPTS.md  Dockerfile.code  Dockerfile.extproc  Dockerfile.godym  Dockerfile.lua  Dockerfile.plugin  Dockerfile.rust  Dockerfile.wasm  EXTENSION-DEVELOPMENT-GUIDE.md  Makefile  README.md  go.mod  go.sum  main.go  manifest.schema.json  schema.go
extensions/auth-jwt/: manifest.yaml
extensions/composer/: Makefile  (+13 more)
extensions/dns-gateway/: Cargo.toml  README.md  config.schema.json  manifest.yaml
extensions/dns-gateway/.cargo/: config.toml
extensions/dns-gateway/manifests/dns-gateway-lookup/: config.schema.json  manifest.yaml
extensions/dns-gateway/manifests/dns-gateway-resolver/: config.schema.json  manifest.yaml
extensions/dns-gateway/manifests/lookup/: config.schema.json  manifest.yaml
extensions/dns-gateway/manifests/resolver/: config.schema.json  manifest.yaml
extensions/dns-gateway/src/: cache_lookup.rs  config.rs  dns_gateway.rs  lib.rs  virtual_ip_cache.rs
extensions/dns-gateway/src/dns_gateway/: cache_lookup.rs  config.rs  mod.rs  virtual_ip_cache.rs
extensions/ip-restriction/: Cargo.toml  Makefile  README.md  config.schema.md  config.yaml  manifest.yaml
extensions/ip-restriction/.cargo/: config.toml
extensions/ip-restriction/src/: lib.rs
tools/: go.mod  go.sum
ui/: .gitignore  .testcoverage.yml  Makefile  executor.go  executor_test.go  index.html  server.go  server_test.go
website/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json
(+866 files in other folders)
