[package]
name = "dns-gateway"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/tetratelabs/built-on-envoy"

[dependencies]
dashmap = "6.1.0"
# The SDK version must match the Envoy version due to the strict compatibility requirements.
envoy-proxy-dynamic-modules-rust-sdk = { git = "https://github.com/envoyproxy/envoy", rev = "5ef4e4cea57f63e7e2970b9c1ad696278db927d6" }
hickory-proto = "0.25.2"
ipnet = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "dns_gateway"
path = "src/lib.rs"
crate-type = ["cdylib"]
