[package]
name = "ip-restriction"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/tetratelabs/built-on-envoy"

[dependencies]
# The SDK version must match the Envoy version due to the strict compatibility requirements.
envoy-proxy-dynamic-modules-rust-sdk = { git = "https://github.com/envoyproxy/envoy", rev = "9bbee9bc38dd3b81b6235ae8dff01327ea5b5a47" }
ipnet = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "ip_restriction"
path = "src/lib.rs"
crate-type = ["cdylib"]
