[package]
name = "ip-restriction"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/tetratelabs/built-on-envoy"

[dependencies]
# The SDK version must match the Envoy version due to the strict compatibility requirements.
envoy-proxy-dynamic-modules-rust-sdk = { git = "https://github.com/envoyproxy/envoy", rev = "5ef4e4cea57f63e7e2970b9c1ad696278db927d6" }
ipnet = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
jsonschema = "0.28"

[lib]
name = "ip_restriction"
path = "src/lib.rs"
crate-type = ["cdylib"]
